# scientific_computation101

./: README.md
data/: README.md
plots/: README.md
src/: 2Heat_Equation.cpp  3Heat_Equation.cpp  Bisection_Method.cpp  Eular_method_T.cpp  Heat_Equation_Analytic_sol_1.cpp  Heat_Equation_Numerical_sol_Error.cpp  Iterative_method.cpp  Loop_test.cpp  Newton _Rapson_Advanced.cpp  Newton_Rapson_Method.cpp  Regula_Falsi_Method.cpp  Runge_kutta_method.cpp  arithmetic.cpp  gradient_decent.cpp  paraboal.cpp  practice.cpp  range_kutta2.cpp
src/project/: CMakeLists.txt  my1.cpp  my2.cpp  my4.cpp  output  output_my1  output_my2  output_my3
